objects/nXBI__Business_Credit_Report__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Credit Reports</relationshipLabel>
        <relationshipName>Business_Credit_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nXBI__Credit_Bureau_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Bureau ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Credit_Bureau_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Bureau Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Customer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__File_Creation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Creation Date</label>
        <type>Date</type>
    </fields>
    <label>Business Credit Report</label>
    <nameField>
        <displayFormat>BCR-{00000000}</displayFormat>
        <label>Business Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>